# IoT-Sensors-Emulator

./: .gitignore  .gitignore.gitignore  README.md  plot.txt  pyproject.toml  requirements.txt  todo.txt
configs/: test_device.yaml
configs/behaviors/: temperature_cycle.json
logs/: telemetry_20260417_094152.jsonl
src/iot_emulator/: __init__.py  __main__.py
src/iot_emulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/iot_emulator/behavior/: __init__.py  dsl_parser.py
src/iot_emulator/cli/: app.py
src/iot_emulator/core/: __init__.py  device.py  orchestrator.py
src/iot_emulator/errors/: __init__.py  injector.py
src/iot_emulator/errors/strategies/: __init__.py  disconnect.py  latency.py  packet_loss.py
src/iot_emulator/logging/: __init__.py  telemetry_logger.py
src/iot_emulator/mqtt/: __init__.py  client.py
src/iot_emulator/sensors/: __init__.py  base.py  binary.py  counter.py  humidity.py  noise.py  registry.py  temperature.py
src/iot_emulator/time_simulation/: __init__.py  simulated_time.py
src/iot_emulator/utils/: config_loader.py
